constructor built with each image as an object

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <section>
+      <img src="" alt="" id="image-one">
+      <img src="" alt="" id="image-two">
+      <img src="" alt="" id="image-three">
+    </section>
 
   </body>
 </html>
