--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1>Which product do you want the most?</h1>
     <section>
       <img src="" alt="" id="image-one">
       <img src="" alt="" id="image-two">
       <img src="" alt="" id="image-three">
     </section>
-
+    <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
