--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   </head>
   <body>
     <h1>Which product do you want the most?</h1>
-    <section>
+    <section id="pic-container">
       <img src="" alt="" id="image-one">
       <img src="" alt="" id="image-two">
       <img src="" alt="" id="image-three">
     </section>
+    <ul id="something">
+    </ul>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
