--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -14,6 +15,7 @@
     </section>
     <ul id="something">
     </ul>
+    <canvas id="chart"></canvas>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
