--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+    <script type="text/javascript"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -15,7 +15,8 @@
     </section>
     <ul id="something">
     </ul>
-    <canvas id="chart"></canvas>
+    <a id="add-results" class="results-chart" href="chart.html">the results chart</a>
+    </hgroup>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
