added colors to index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Which product do you want the most?</h1>
     <section id="pic-container">
-      <img src="" alt="" id="image-one">
-      <img src="" alt="" id="image-two">
-      <img src="" alt="" id="image-three">
+      <img border="" src="" alt="" id="image-one">
+      <img border="" src="" alt="" id="image-two">
+      <img border="" src="" alt="" id="image-three">
     </section>
     <ul id="something">
     </ul>
